Fixed overflow

--- a/houzez/src/index.css
+++ b/houzez/src/index.css
@@ -64,7 +64,7 @@ body {
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: blue;
+  /* background-color: blue; */
   color: white;
   text-decoration: none;
   border-radius: 30px;
